@@ -1,5 +1,7 @@
 Revision history for Perl extension WebService::Solr.
 
+ - Switch from the deprecated Any::Moose to Moo + Types::Standard
+
 0.23 2014-02-07 16:58
  - Fix a bug in Webservice::Solr::Query::stringify() where it would
    sometimes modify the query argument structure passed in.  This would
